// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfilePageLinks - Snapshots > matches snapshot with custom links 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="flex flex-col"
    data-testid="container"
  >
    <a
      class="flex items-center gap-2.5 py-1"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-globe shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
        />
        <path
          d="M2 12h20"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        Example
      </span>
    </a>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with empty links 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="flex flex-col"
    data-testid="container"
  >
    <div
      class="mx-auto w-full mt-2 flex flex-col"
      data-testid="container"
    >
      <span
        class="text-base font-medium text-muted-foreground"
        data-testid="typography"
      >
        No links added yet.
      </span>
    </div>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with links 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="flex flex-col"
    data-testid="container"
  >
    <a
      class="flex items-center gap-2.5 py-1"
      href="https://bitcoin.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-globe shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
        />
        <path
          d="M2 12h20"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        bitcoin.org
      </span>
    </a>
    <a
      class="flex items-center gap-2.5 py-1"
      href="https://twitter.com/test"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-twitter shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        twitter.com/test
      </span>
    </a>
    <a
      class="flex items-center gap-2.5 py-1"
      href="https://github.com/test"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-github shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
        />
        <path
          d="M9 18c-4.51 2-5-2-7-2"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        github.com/test
      </span>
    </a>
  </div>
</div>
`;
